Fix thinko